BSD fixes #48: Adjust spacing in accreditations.

--- a/stories/components/footer/footer.scss
+++ b/stories/components/footer/footer.scss
@@ -134,3 +134,14 @@
     }
   }
 }
+
+// Accreditations overides.
+.bix-site-footer__column--accreditations {
+  ul {
+    padding-left: 0;
+  }
+
+  img {
+    margin-top: units("05");
+  }
+}
